syntax = "proto3";
package event;

import "v1/event/model.proto";

message AppendRequest {
  string aggregate_id = 1;
  string aggregate_type = 2;
  int64 expected_version = 3;  // -1 for new stream
  repeated Event events = 4;   // version must be expected_version+1..+n
}

message ReadByAggregateRequest {
  string aggregate_id = 1;
  int64 from_version = 2; // default 0
}

message ReadByTypeRequest {
  string aggregate_type = 1;
  int64 limit = 2;
  string after_id = 3; // pagination token
}

message SubscribeRequest {
  string aggregate_type = 1; // optional, empty = all
  string from_event_id = 2;  // resume token (optional)
}

message GetSnapshotRequest {
  string aggregate_id = 1;
}

message PutSnapshotRequest {
  Snapshot snapshot = 1;
}

